# CHANGELOG

## Each line correspeond to a pull request to the master branch (no date -> not yet merged/created : still in dev branch)

## BSD-Tested

- Experiments
  - BSD Support
- Will tested in on BSD
- Focus on BSD
- Remove index.theme , since it is a wrriten by nwg-look, but added a index.default.theme to add index.default.theme to create it. 

## Protoype 2 - 2026-01-9

- Experiment with
  - X11 Windows Managers
  - Fish Shell + Starship
  - GNU Stow
  - Restructure with GNU Stow
- Scripts moved to scripts
- Wofi replaced with Rofi for Hyprland
- Added missing packages config/dotfiles
- Reworked `installer.sh`
- JSON File for list of program to install for modurality
- Added/Updated Code of Respect to its latest version
- Added initial FreeBSD Support for the installer
- Updated the `README.md`
- Added Rofi power menu and mpris to the dotfiles
- Added Spectrwm config
- Added GTK + QT Style
- Added `save-ricing.sh` to save ricing
- Added xsettings setting
- Added icons setting